# desktop-app

./: 70-707438_blank-t-shirt-back-yellow-shirt-clipart.glb  CMakeLists.txt  DesktopViewer  DesktopViewer.pro  desktop.ini  desktopviewer.cpp  desktopviewer.h  desktopviewer.ui  glviewport.cpp  glviewport.h  grey_cargo_pant.glb  images.glb  main.cpp  ornek.glb  pant1-removebg-preview.glb  sky-blue-t-shirt.glb  sweater_output.glb  t-shirt2.glb  used_new_balance_574_classic______free.glb
src/: DesktopViewer.cpp  DesktopViewer.h  main.cpp
